--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   transparent_image: ^2.0.1
   material_symbols_icons: ^4.2668.0
+  flutter_riverpod: ^2.4.1
 
 dev_dependencies:
   flutter_test:
